# torchdistx

./: .clang-tidy  .gitignore  ASan.supp  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  _config.yaml  index.md  requirements-devel.txt  requirements.txt  setup.py  use-cpu.txt  use-cu102.txt  use-cu113.txt  use-cu116.txt
.github/: CODEOWNERS
.github/workflows/: _build_conda.yaml  _build_doc.yaml  _build_wheel.yaml  _deploy.yaml  _lint.yaml  _test_conda.yaml  _test_wheel.yaml  nightly.yaml  push.yaml  release.yaml
0.1.0/: .buildinfo  deferred_init.html  fake_tensor.html  index.html  objects.inv  searchindex.js
0.1.0/_modules/torchdistx/: deferred_init.html  fake.html
0.2.0/: deferred_init.html  fake_tensor.html  fake_tensor_and_deferred_init.html  genindex.html  objects.inv  search.html  searchindex.js
0.2.0/_modules/: index.html
0.2.0/_sources/: index.rst.txt
_layouts/: redirect.html
cmake/: Helpers.cmake
docker/ci-base/: install-python
docker/ci-clang/: Dockerfile
docker/ci-conda/: Dockerfile.cpu  Dockerfile.cu102  Dockerfile.cu113  Dockerfile.cu116  install-cuda-10.2
docker/ci-wheel/: Dockerfile.cu102  Dockerfile.cu113  Dockerfile.cu116  install-cudnn-7.6.5  install-cudnn-8.5.0  install-devtoolset-8  install-devtoolset-9
docs/: requirements.txt
docs/src/: fake_tensor.rst  fake_tensor_and_deferred_init.rst  gossip_grad.rst  index.rst  slow_momentum_fsdp.rst
nightly/: .buildinfo  deferred_init.html  fake_tensor.html  fake_tensor_and_deferred_init.html  genindex.html  gossip_grad.html  index.html  objects.inv  search.html  searchindex.js  slow_momentum_fsdp.html
nightly/_modules/: index.html
nightly/_modules/torchdistx/: deferred_init.html  fake.html  gossip_grad.html
nightly/_modules/torchdistx/slowmo/: slowmo_comm.html  slowmo_optimizer.html
nightly/_static/: documentation_options.js
packaging/conda/: build.sh  conda_build_config.yaml  install-debug.sh  install-devel.sh  install-lib.sh  install-python.sh  meta.yaml
packaging/conda/variants/: cu102.yaml  cu113.yaml  cu116.yaml
scripts/: set-version  strip-debug-symbols
src/cc/: torchdistx-config.cmake.in
src/cc/torchdistx/: CMakeLists.txt  deferred_init.cc  deferred_init.h  fake.cc  fake.h  macros.h  stack_utils.cc  stack_utils.h
src/optimizers/: anyprecision_optimizer.py  bff_optimizer.py
src/python/torchdistx/: _C.pyi  __init__.py  deferred_init.py  fake.py  gossip_grad.py  slowMomentum_hook.py
src/python/torchdistx/_C/: CMakeLists.txt  deferred_init.cc  fake.cc  module.cc  module.h
src/python/torchdistx/checkpoint/: __init__.py  metadata.py  state_dict_loader.py  state_dict_saver.py  storage_reader.py  storage_writer.py
src/python/torchdistx/optimizers/: __init__.py  anyprecision_optimizer.py
src/python/torchdistx/slow_momentum/: __init__.py  slow_momentum_comm.py  slow_momentum_optimizer.py
src/python/torchdistx/slow_momentum_fsdp/: __init__.py  slowMomentum_hook.py  slowMomentum_optimizer.py
src/python/torchdistx/slowmo/: slowmo_comm.py  slowmo_optimizer.py
tests/python/: test_anyprecision_optimizer.py  test_comm_hooks_fsdp.py  test_deferred_init.py  test_fake.py  test_file_system_checkpoint.py  test_slowmo_fsdp.py
